--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
   <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" required>
   <select id="teacher"><option value="">Choose Teacher</option></select>
 
+  <!-- NEW: PART SELECTOR -->
+  <select id="partSelector" onchange="loadSelectedPart()">
+    <option value="-1">Choose a Part to Work On</option>
+    <option value="all">All Parts (Full Assessment)</option>
+    <option disabled>──────────────────</option>
+  </select>
+
   <div id="locked-msg" class="locked hidden">
     Device locked to Student ID: <strong id="locked-id"></strong>
   </div>
 
   <div id="questions"></div>
 
-  <button class="btn purple" onclick="submitWork()">Submit & Auto-Grade All Parts</button>
+  <button class="btn purple" onclick="submitWork()">Submit & Auto-Grade</button>
   <button class="btn green" onclick="emailWork()">Send via Outlook (PDF attached)</button>
   <button class="btn red" onclick="if(confirm('Clear ALL data on this device?')){localStorage.clear();location.reload();}">
     Teacher: Clear All Data
@@ -57,6 +64,7 @@
 <script>
 const STORAGE_KEY = "BCATS_LOCKED_ID";
 let lockedId = localStorage.getItem(STORAGE_KEY);
+let currentQuestions = [];           // Holds questions for the selected part(s)
 
 if (lockedId) {
   document.getElementById("locked-msg").classList.remove("hidden");
@@ -72,16 +80,37 @@ TEACHERS.forEach(t => {
   document.getElementById("teacher").appendChild(o);
 });
 
-// Show all parts
-let allQuestions = [];
-TASKS.forEach(task => {
+// Populate part selector
+TASKS.forEach((task, i) => {
+  const opt = document.createElement("option");
+  opt.value = i;
+  opt.textContent = `Part ${i+1}: ${task.name.split("–")[1]?.trim() || task.name} (${task.totalPoints} marks)`;
+  document.getElementById("partSelector").appendChild(opt);
+});
+
+function loadSelectedPart() {
+  const sel = document.getElementById("partSelector");
+  const choice = sel.value;
+  const container = document.getElementById("questions");
+  container.innerHTML = "";               // clear previous questions
+  currentQuestions = [];
+
+  if (choice === "-1") return;
+  if (choice === "all") {
+    TASKS.forEach(task => addPartToPage(task));
+  } else {
+    addPartToPage(TASKS[choice]);
+  }
+}
+
+function addPartToPage(task) {
   const partDiv = document.createElement("div");
   partDiv.className = "part";
   partDiv.innerHTML = `<h2>${task.name} (${task.totalPoints} marks)</h2>`;
   document.getElementById("questions").appendChild(partDiv);
 
-  task.questions.forEach((q,i) => {
-    allQuestions.push(q);
+  task.questions.forEach(q => {
+    currentQuestions.push(q);
     const div = document.createElement("div");
     div.className = "q";
     div.innerHTML = `
@@ -90,7 +119,7 @@ TASKS.forEach(task => {
     `;
     document.getElementById("questions").appendChild(div);
   });
-});
+}
 
 function getAnswer(id) { return document.getElementById("a"+id)?.value.trim() || ""; }
 
@@ -98,7 +127,7 @@ function gradeIt() {
   let total = 0;
   const results = [];
 
-  allQuestions.forEach(q => {
+  currentQuestions.forEach(q => {
     const ans = getAnswer(q.id);
     let earned = 0;
     let hints = [];
@@ -133,6 +162,7 @@ window.submitWork = function() {
   const name = document.getElementById("name").value.trim();
   const id = document.getElementById("id").value.trim();
   if (!name || !id || !document.getElementById("teacher").value) return alert("Fill Name, ID and Teacher");
+  if (document.getElementById("partSelector").value === "-1") return alert("Please choose a part first");
 
   if (lockedId && lockedId !== id) return alert("Device locked to Student ID: " + lockedId);
   if (!lockedId) {
@@ -144,23 +174,27 @@ window.submitWork = function() {
   }
 
   const { total, results } = gradeIt();
-  const pct = Math.round((total / 37) * 100);
+  const maxPossible = currentQuestions.reduce((s,q) => s + q.maxPoints, 0);
+  const pct = Math.round((total / maxPossible) * 100);
 
   finalData = {
     name, id,
     teacherName: document.getElementById("teacher").selectedOptions[0].textContent,
     teacherEmail: document.getElementById("teacher").value,
-    points: total, pct,
+    points: total,
+    maxPossible,
+    pct,
     submittedAt: new Date().toLocaleString(),
-    results
+    results,
+    partName: document.getElementById("partSelector").selectedOptions[0].textContent
   };
 
   document.getElementById("student").textContent = name;
   document.getElementById("teacher-name").textContent = finalData.teacherName;
-  document.getElementById("grade").innerHTML = total + "/37<br><small>(" + pct + "%)</small>";
+  document.getElementById("grade").innerHTML = total + "/" + maxPossible + "<br><small>(" + pct + "%)</small>";
 
   const ansDiv = document.getElementById("answers");
-  ansDiv.innerHTML = "<h3>Your Answers & Feedback</h3>";
+  ansDiv.innerHTML = `<h3>${finalData.partName}</h3>`;
   results.forEach(r => {
     const div = document.createElement("div");
     div.className = `feedback ${r.earned === r.max ? "correct" : r.earned > 0 ? "partial" : "wrong"}`;
@@ -179,28 +213,27 @@ window.back = () => {
   document.getElementById("form").classList.remove("hidden");
 };
 
+/* PDF generation – unchanged except it now shows which part was completed */
 window.emailWork = async function() {
   if (!finalData) return alert("Submit first!");
 
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF('p', 'mm', 'a4');
-  const pageWidth = doc.internal.pageSize.getWidth();
   let y = 15;
 
-  // PHS Crest
   try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {}
 
-  // Header
   doc.setFontSize(20);
   doc.text("US 24355 – Construction Materials", 45, 20);
   doc.setFontSize(26);
   doc.text(finalData.name, 45, 32);
   doc.setFontSize(16);
   doc.text("ID: " + finalData.id + "    |    Teacher: " + finalData.teacherName, 45, 40);
-  doc.text("Submitted: " + finalData.submittedAt, 45, 47);
+  doc.text("Part: " + finalData.partName, 45, 47);
+  doc.text("Submitted: " + finalData.submittedAt, 45, 54);
   doc.setFontSize(28);
-  doc.text("GRADE: " + finalData.points + "/37 (" + finalData.pct + "%)", 45, 60);
-  y = 70;
+  doc.text("GRADE: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)", 45, 68);
+  y = 78;
 
   finalData.results.forEach(r => {
     if (y > 270) { doc.addPage(); y = 20; try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {} }
@@ -222,14 +255,13 @@ window.emailWork = async function() {
     doc.text(`${r.earned}/${r.max}`, 170, y - 3);
     y += 12;
 
-    doc.setFontSize(11);
-    const lines = doc.splitTextToSize(r.answer, pageWidth - 45);
+    const lines = doc.splitTextToSize(r.answer, 170);
     lines.forEach(l => { doc.text("→ " + l, 20, y); y += 6; });
 
     if (r.earned < r.max) {
       doc.setFontSize(10);
       doc.setTextColor(150,0,0);
-      const tip = doc.splitTextToSize("Tip: " + r.hint, pageWidth - 45);
+      const tip = doc.splitTextToSize("Tip: " + r.hint, 170);
       tip.forEach(t => { doc.text(t, 20, y); y += 6; });
       doc.setTextColor(0,0,0);
     }
@@ -248,10 +280,10 @@ window.emailWork = async function() {
     const reader = new FileReader();
     reader.onload = () => {
       window.open("https://outlook.office.com/mail/deeplink/compose?subject=" +
-        encodeURIComponent(finalData.name + " – US 24355 Materials") +
+        encodeURIComponent(finalData.name + " – US 24355 " + finalData.partName) +
         "&body=" + encodeURIComponent(
-          "Kia ora " + finalData.teacherName + ",\n\nPlease find my completed US 24355 assessment attached.\n\n" +
-          "Grade: " + finalData.points + "/37 (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
+          "Kia ora " + finalData.teacherName + ",\n\nPlease find my completed " + finalData.partName + " attached.\n\n" +
+          "Grade: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
         ) +
         "&attach=" + encodeURIComponent(reader.result), "_blank");
     };
