--- a/index.html
+++ b/index.html
@@ -1,295 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pukekohe High – US 24355 Materials</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <style>
-    body {font-family:Arial,sans-serif;max-width:900px;margin:40px auto;padding:20px;background:#f9f9f9;color:#333;line-height:1.6;}
-    h1,h2{text-align:center;color:#2c3e50;}
-    .btn{display:block;width:100%;padding:20px;margin:20px 0;font-size:22px;border:none;border-radius:12px;color:white;cursor:pointer;}
-    .btn:hover{opacity:0.9;transform:scale(1.02);}
-    .purple{background:#6a1b9a;}.green{background:#27ae60;}.orange{background:#e67e22;}.red{background:#c0392b;}
-    input,select,textarea{width:100%;padding:14px;margin:10px 0;border:2px solid #ddd;border-radius:8px;font-size:18px;
-      autocomplete:off !important; autocorrect:off; autocapitalize:off; spellcheck:false;}
-    .q{background:white;padding:18px;margin:18px 0;border-radius:12px;box-shadow:0 3px 12px rgba(0,0,0,0.1);}
-    .part{margin-top:40px;padding:15px;background:#e8eaf6;border-left:6px solid #3949ab;}
-    .hidden{display:none;}
-    .locked{background:#e8f5e8;padding:15px;border-left:6px solid #27ae60;text-align:center;font-weight:bold;}
-    .feedback{margin-top:10px;padding:12px;border-radius:8px;font-size:15px;}
-    .wrong{background:#ffebee;border-left:5px solid #e74c3c;}
-    .partial{background:#fff3cd;border-left:5px solid #f39c12;}
-    .correct{background:#e8f5e8;border-left:5px solid #27ae60;}
-  </style>
-</head>
-<body>
+const TEACHERS = [
+  { id: "RY", name: "Mr Reynolds", email: "ry@pukekohehigh.school.nz" },
+  { id: "RNR", name: "Mr Ranford", email: "rnr@pukekohehigh.school.nz" },
+  { id: "Other", name: "Other Teacher", email: "technology@pukekohehigh.school.nz" }
+];
 
-<h1>US 24355 – Demonstrate knowledge of construction materials</h1>
-
-<div id="form">
-  <input type="text" id="name" placeholder="Full Name *" required>
-  <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" required>
-  <select id="teacher"><option value="">Choose Teacher</option></select>
-
-  <!-- NEW: PART SELECTOR -->
-  <select id="partSelector" onchange="loadSelectedPart()">
-    <option value="-1">Choose a Part to Work On</option>
-    <option value="all">All Parts (Full Assessment)</option>
-    <option disabled>──────────────────</option>
-  </select>
-
-  <div id="locked-msg" class="locked hidden">
-    Device locked to Student ID: <strong id="locked-id"></strong>
-  </div>
-
-  <div id="questions"></div>
-
-  <button class="btn purple" onclick="submitWork()">Submit & Auto-Grade</button>
-  <button class="btn green" onclick="emailWork()">Send via Outlook (PDF attached)</button>
-  <button class="btn red" onclick="if(confirm('Clear ALL data on this device?')){localStorage.clear();location.reload();}">
-    Teacher: Clear All Data
-  </button>
-</div>
-
-<div id="result" class="hidden">
-  <h2>All Done <span id="student"></span>!</h2>
-  <h1 style="color:#27ae60;text-align:center;" id="grade">0/37</h1>
-  <p style="text-align:center;font-size:180%;">Teacher: <span id="teacher-name"></span></p>
-  <div id="answers"></div>
-  <button class="btn orange" onclick="back()">Back to Form</button>
-</div>
-
-<script src="questions.js"></script>
-<script>
-const STORAGE_KEY = "BCATS_LOCKED_ID";
-let lockedId = localStorage.getItem(STORAGE_KEY);
-let currentQuestions = [];           // Holds questions for the selected part(s)
-
-if (lockedId) {
-  document.getElementById("locked-msg").classList.remove("hidden");
-  document.getElementById("locked-id").textContent = lockedId;
-  document.getElementById("id").value = lockedId;
-  document.getElementById("id").readOnly = true;
-}
-
-// Load teachers
-TEACHERS.forEach(t => {
-  const o = document.createElement("option");
-  o.value = t.email; o.textContent = t.name;
-  document.getElementById("teacher").appendChild(o);
-});
-
-// Populate part selector
-TASKS.forEach((task, i) => {
-  const opt = document.createElement("option");
-  opt.value = i;
-  opt.textContent = `Part ${i+1}: ${task.name.split("–")[1]?.trim() || task.name} (${task.totalPoints} marks)`;
-  document.getElementById("partSelector").appendChild(opt);
-});
-
-function loadSelectedPart() {
-  const sel = document.getElementById("partSelector");
-  const choice = sel.value;
-  const container = document.getElementById("questions");
-  container.innerHTML = "";               // clear previous questions
-  currentQuestions = [];
-
-  if (choice === "-1") return;
-  if (choice === "all") {
-    TASKS.forEach(task => addPartToPage(task));
-  } else {
-    addPartToPage(TASKS[choice]);
+// ALL ASSESSMENTS IN ONE ARRAY – ADD MORE ANYTIME!
+const ASSESSMENTS = [
+  {
+    id: "24355-part1",
+    title: "US 24355 Materials – Part 1",
+    subtitle: "New Zealand Timbers (11 marks)",
+    totalPoints: 11,
+    questions: [ /* paste your Part 1 questions here – same format as before */ ]
+  },
+  {
+    id: "24355-part2",
+    title: "US 24355 Materials – Part 2",
+    subtitle: "Manufactured Boards & Plastics (9 marks)",
+    totalPoints: 9,
+    questions: [ /* Part 2 questions */ ]
+  },
+  {
+    id: "24355-part3",
+    title: "US 24355 Materials – Part 3",
+    subtitle: "Metals & Concrete (5 marks)",
+    totalPoints: 5,
+    questions: [ /* Part 3 */ ]
+  },
+  {
+    id: "24355-part4",
+    title: "US 24355 Materials – Part 4",
+    subtitle: "Paint Finishes (5 marks)",
+    totalPoints: 5,
+    questions: [ /* Part 4 */ ]
+  },
+  {
+    id: "24355-part5",
+    title: "US 24355 Materials – Part 5",
+    subtitle: "Polishes & Varnishes (7 marks)",
+    totalPoints: 7,
+    questions: [ /* Part 5 */ ]
   }
-}
-
-function addPartToPage(task) {
-  const partDiv = document.createElement("div");
-  partDiv.className = "part";
-  partDiv.innerHTML = `<h2>${task.name} (${task.totalPoints} marks)</h2>`;
-  document.getElementById("questions").appendChild(partDiv);
-
-  task.questions.forEach(q => {
-    currentQuestions.push(q);
-    const div = document.createElement("div");
-    div.className = "q";
-    div.innerHTML = `
-      <strong>Q${q.id.toUpperCase()} (${q.maxPoints} pts)</strong><br>${q.text}<br>
-      ${q.type==="long" ? `<textarea rows="5" id="a${q.id}"></textarea>` : `<input type="text" id="a${q.id}">`}
-    `;
-    document.getElementById("questions").appendChild(div);
-  });
-}
-
-function getAnswer(id) { return document.getElementById("a"+id)?.value.trim() || ""; }
-
-function gradeIt() {
-  let total = 0;
-  const results = [];
-
-  currentQuestions.forEach(q => {
-    const ans = getAnswer(q.id);
-    let earned = 0;
-    let hints = [];
-
-    if (q.rubric) {
-      q.rubric.forEach(rule => {
-        if (rule.check.test(ans)) earned += rule.points;
-        else if (rule.hint) hints.push(rule.hint);
-      });
-    }
-
-    total += earned;
-    const isCorrect = earned === q.maxPoints;
-
-    results.push({
-      id: q.id.toUpperCase(),
-      question: q.text,
-      answer: ans || "(blank)",
-      earned,
-      max: q.maxPoints,
-      markText: isCorrect ? "Correct" : earned > 0 ? "Incorrect (partial)" : "Incorrect",
-      hint: hints.length ? hints.join(" • ") : (isCorrect ? "" : q.hint || "Check your answer")
-    });
-  });
-
-  return { total, results };
-}
-
-let finalData = null;
-
-window.submitWork = function() {
-  const name = document.getElementById("name").value.trim();
-  const id = document.getElementById("id").value.trim();
-  if (!name || !id || !document.getElementById("teacher").value) return alert("Fill Name, ID and Teacher");
-  if (document.getElementById("partSelector").value === "-1") return alert("Please choose a part first");
-
-  if (lockedId && lockedId !== id) return alert("Device locked to Student ID: " + lockedId);
-  if (!lockedId) {
-    localStorage.setItem(STORAGE_KEY, id);
-    lockedId = id;
-    document.getElementById("locked-msg").classList.remove("hidden");
-    document.getElementById("locked-id").textContent = id;
-    document.getElementById("id").readOnly = true;
-  }
-
-  const { total, results } = gradeIt();
-  const maxPossible = currentQuestions.reduce((s,q) => s + q.maxPoints, 0);
-  const pct = Math.round((total / maxPossible) * 100);
-
-  finalData = {
-    name, id,
-    teacherName: document.getElementById("teacher").selectedOptions[0].textContent,
-    teacherEmail: document.getElementById("teacher").value,
-    points: total,
-    maxPossible,
-    pct,
-    submittedAt: new Date().toLocaleString(),
-    results,
-    partName: document.getElementById("partSelector").selectedOptions[0].textContent
-  };
-
-  document.getElementById("student").textContent = name;
-  document.getElementById("teacher-name").textContent = finalData.teacherName;
-  document.getElementById("grade").innerHTML = total + "/" + maxPossible + "<br><small>(" + pct + "%)</small>";
-
-  const ansDiv = document.getElementById("answers");
-  ansDiv.innerHTML = `<h3>${finalData.partName}</h3>`;
-  results.forEach(r => {
-    const div = document.createElement("div");
-    div.className = `feedback ${r.earned === r.max ? "correct" : r.earned > 0 ? "partial" : "wrong"}`;
-    div.innerHTML = `<strong>${r.id}: ${r.earned}/${r.max} — ${r.markText}</strong><br>
-      Your answer: <em>${r.answer}</em><br>
-      ${r.earned < r.max ? "<strong>Tip:</strong> " + r.hint : "Perfect!"}`;
-    ansDiv.appendChild(div);
-  });
-
-  document.getElementById("form").classList.add("hidden");
-  document.getElementById("result").classList.remove("hidden");
-};
-
-window.back = () => {
-  document.getElementById("result").classList.add("hidden");
-  document.getElementById("form").classList.remove("hidden");
-};
-
-/* PDF generation – unchanged except it now shows which part was completed */
-window.emailWork = async function() {
-  if (!finalData) return alert("Submit first!");
-
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF('p', 'mm', 'a4');
-  let y = 15;
-
-  try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {}
-
-  doc.setFontSize(20);
-  doc.text("US 24355 – Construction Materials", 45, 20);
-  doc.setFontSize(26);
-  doc.text(finalData.name, 45, 32);
-  doc.setFontSize(16);
-  doc.text("ID: " + finalData.id + "    |    Teacher: " + finalData.teacherName, 45, 40);
-  doc.text("Part: " + finalData.partName, 45, 47);
-  doc.text("Submitted: " + finalData.submittedAt, 45, 54);
-  doc.setFontSize(28);
-  doc.text("GRADE: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)", 45, 68);
-  y = 78;
-
-  finalData.results.forEach(r => {
-    if (y > 270) { doc.addPage(); y = 20; try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {} }
-
-    doc.setFontSize(12);
-    doc.setFont("helvetica", "bold");
-    doc.text(`${r.id}: ${r.question}`, 15, y); y += 8;
-
-    doc.setFontSize(22);
-    if (r.earned === r.max) {
-      doc.setTextColor(0,120,0);
-      doc.text("Correct", 140, y);
-    } else {
-      doc.setTextColor(180,0,0);
-      doc.text(r.earned > 0 ? "Incorrect (partial)" : "Incorrect", 110, y);
-    }
-    doc.setTextColor(0,0,0);
-    doc.setFontSize(14);
-    doc.text(`${r.earned}/${r.max}`, 170, y - 3);
-    y += 12;
-
-    const lines = doc.splitTextToSize(r.answer, 170);
-    lines.forEach(l => { doc.text("→ " + l, 20, y); y += 6; });
-
-    if (r.earned < r.max) {
-      doc.setFontSize(10);
-      doc.setTextColor(150,0,0);
-      const tip = doc.splitTextToSize("Tip: " + r.hint, 170);
-      tip.forEach(t => { doc.text(t, 20, y); y += 6; });
-      doc.setTextColor(0,0,0);
-    }
-    y += 10;
-  });
-
-  const blob = doc.output('blob');
-  const file = new File([blob], finalData.id + "_" + finalData.name.replace(/ /g,"_") + "_US24355.pdf", {type:"application/pdf"});
-
-  if (navigator.canShare && navigator.canShare({files:[file]})) {
-    try { await navigator.share({files:[file], title: finalData.name + " – US 24355"}); }
-    catch { fallbackOutlook(file); }
-  } else fallbackOutlook(file);
-
-  function fallbackOutlook(file) {
-    const reader = new FileReader();
-    reader.onload = () => {
-      window.open("https://outlook.office.com/mail/deeplink/compose?subject=" +
-        encodeURIComponent(finalData.name + " – US 24355 " + finalData.partName) +
-        "&body=" + encodeURIComponent(
-          "Kia ora " + finalData.teacherName + ",\n\nPlease find my completed " + finalData.partName + " attached.\n\n" +
-          "Grade: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
-        ) +
-        "&attach=" + encodeURIComponent(reader.result), "_blank");
-    };
-    reader.readAsDataURL(file);
-  }
-};
-</script>
-</body>
-</html>
+  // Add more units here anytime!
+  // Example:
+  // { id: "2593", title: "US 2593 Joints", subtitle: "Woodworking Joints (15 marks)", ... }
+];
