--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pukekohe High – US 24355 Materials</title>
+  <title>Pukekohe High – Technology Assessments</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {font-family:Arial,sans-serif;max-width:900px;margin:40px auto;padding:20px;background:#f9f9f9;color:#333;line-height:1.6;}
@@ -14,7 +14,6 @@
     input,select,textarea{width:100%;padding:14px;margin:10px 0;border:2px solid #ddd;border-radius:8px;font-size:18px;
       autocomplete:off !important; autocorrect:off; autocapitalize:off; spellcheck:false;}
     .q{background:white;padding:18px;margin:18px 0;border-radius:12px;box-shadow:0 3px 12px rgba(0,0,0,0.1);}
-    .part{margin-top:40px;padding:15px;background:#e8eaf6;border-left:6px solid #3949ab;}
     .hidden{display:none;}
     .locked{background:#e8f5e8;padding:15px;border-left:6px solid #27ae60;text-align:center;font-weight:bold;}
     .feedback{margin-top:10px;padding:12px;border-radius:8px;font-size:15px;}
@@ -25,18 +24,16 @@
 </head>
 <body>
 
-<h1>US 24355 – Demonstrate knowledge of construction materials</h1>
+<h1>Pukekohe High School – Technology Self-Assessments</h1>
 
 <div id="form">
   <input type="text" id="name" placeholder="Full Name *" required>
   <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" required>
   <select id="teacher"><option value="">Choose Teacher</option></select>
 
-  <!-- NEW: PART SELECTOR -->
-  <select id="partSelector" onchange="loadSelectedPart()">
-    <option value="-1">Choose a Part to Work On</option>
-    <option value="all">All Parts (Full Assessment)</option>
-    <option disabled>──────────────────</option>
+  <!-- MAIN ASSESSMENT SELECTOR -->
+  <select id="assessmentSelector" onchange="loadAssessment()">
+    <option value="">→ Choose Assessment to Complete ←</option>
   </select>
 
   <div id="locked-msg" class="locked hidden">
@@ -47,7 +44,7 @@
 
   <button class="btn purple" onclick="submitWork()">Submit & Auto-Grade</button>
   <button class="btn green" onclick="emailWork()">Send via Outlook (PDF attached)</button>
-  <button class="btn red" onclick="if(confirm('Clear ALL data on this device?')){localStorage.clear();location.reload();}">
+  <button class="btn red" onclick="if(confirm('Clear ALL data?')){localStorage.clear();location.reload();}">
     Teacher: Clear All Data
   </button>
 </div>
@@ -62,9 +59,9 @@
 
 <script src="questions.js"></script>
 <script>
-const STORAGE_KEY = "BCATS_LOCKED_ID";
+const STORAGE_KEY = "TECH_LOCKED_ID";
 let lockedId = localStorage.getItem(STORAGE_KEY);
-let currentQuestions = [];           // Holds questions for the selected part(s)
+let currentAssessment = null;   // Will hold the selected assessment object
 
 if (lockedId) {
   document.getElementById("locked-msg").classList.remove("hidden");
@@ -80,44 +77,36 @@ TEACHERS.forEach(t => {
   document.getElementById("teacher").appendChild(o);
 });
 
-// Populate part selector
-TASKS.forEach((task, i) => {
+// Populate assessment dropdown
+ASSESSMENTS.forEach((assess, i) => {
   const opt = document.createElement("option");
   opt.value = i;
-  opt.textContent = `Part ${i+1}: ${task.name.split("–")[1]?.trim() || task.name} (${task.totalPoints} marks)`;
-  document.getElementById("partSelector").appendChild(opt);
+  opt.textContent = assess.title + " – " + assess.subtitle + " (" + assess.totalPoints + " marks)";
+  document.getElementById("assessmentSelector").appendChild(opt);
 });
 
-function loadSelectedPart() {
-  const sel = document.getElementById("partSelector");
-  const choice = sel.value;
+function loadAssessment() {
+  const sel = document.getElementById("assessmentSelector");
+  const idx = sel.value;
+  if (idx === "") return;
+
+  currentAssessment = ASSESSMENTS[idx];
   const container = document.getElementById("questions");
-  container.innerHTML = "";               // clear previous questions
-  currentQuestions = [];
+  container.innerHTML = "";
 
-  if (choice === "-1") return;
-  if (choice === "all") {
-    TASKS.forEach(task => addPartToPage(task));
-  } else {
-    addPartToPage(TASKS[choice]);
-  }
-}
+  const header = document.createElement("div");
+  header.style = "background:#3949ab;color:white;padding:15px;border-radius:10px;margin:20px 0;";
+  header.innerHTML = `<h2 style="margin:0;color:white;">${currentAssessment.title}<br><small>${currentAssessment.subtitle} – ${currentAssessment.totalPoints} marks</small></h2>`;
+  container.appendChild(header);
 
-function addPartToPage(task) {
-  const partDiv = document.createElement("div");
-  partDiv.className = "part";
-  partDiv.innerHTML = `<h2>${task.name} (${task.totalPoints} marks)</h2>`;
-  document.getElementById("questions").appendChild(partDiv);
-
-  task.questions.forEach(q => {
-    currentQuestions.push(q);
+  currentAssessment.questions.forEach(q => {
     const div = document.createElement("div");
     div.className = "q";
     div.innerHTML = `
       <strong>Q${q.id.toUpperCase()} (${q.maxPoints} pts)</strong><br>${q.text}<br>
       ${q.type==="long" ? `<textarea rows="5" id="a${q.id}"></textarea>` : `<input type="text" id="a${q.id}">`}
     `;
-    document.getElementById("questions").appendChild(div);
+    container.appendChild(div);
   });
 }
 
@@ -127,7 +116,7 @@ function gradeIt() {
   let total = 0;
   const results = [];
 
-  currentQuestions.forEach(q => {
+  currentAssessment.questions.forEach(q => {
     const ans = getAnswer(q.id);
     let earned = 0;
     let hints = [];
@@ -162,7 +151,7 @@ window.submitWork = function() {
   const name = document.getElementById("name").value.trim();
   const id = document.getElementById("id").value.trim();
   if (!name || !id || !document.getElementById("teacher").value) return alert("Fill Name, ID and Teacher");
-  if (document.getElementById("partSelector").value === "-1") return alert("Please choose a part first");
+  if (!currentAssessment) return alert("Please select an assessment first");
 
   if (lockedId && lockedId !== id) return alert("Device locked to Student ID: " + lockedId);
   if (!lockedId) {
@@ -174,27 +163,26 @@ window.submitWork = function() {
   }
 
   const { total, results } = gradeIt();
-  const maxPossible = currentQuestions.reduce((s,q) => s + q.maxPoints, 0);
-  const pct = Math.round((total / maxPossible) * 100);
+  const pct = Math.round((total / currentAssessment.totalPoints) * 100);
 
   finalData = {
     name, id,
     teacherName: document.getElementById("teacher").selectedOptions[0].textContent,
     teacherEmail: document.getElementById("teacher").value,
+    assessment: currentAssessment,
     points: total,
-    maxPossible,
+    totalPoints: currentAssessment.totalPoints,
     pct,
     submittedAt: new Date().toLocaleString(),
-    results,
-    partName: document.getElementById("partSelector").selectedOptions[0].textContent
+    results
   };
 
   document.getElementById("student").textContent = name;
   document.getElementById("teacher-name").textContent = finalData.teacherName;
-  document.getElementById("grade").innerHTML = total + "/" + maxPossible + "<br><small>(" + pct + "%)</small>";
+  document.getElementById("grade").innerHTML = total + "/" + currentAssessment.totalPoints + "<br><small>(" + pct + "%)</small>";
 
   const ansDiv = document.getElementById("answers");
-  ansDiv.innerHTML = `<h3>${finalData.partName}</h3>`;
+  ansDiv.innerHTML = `<h3>${currentAssessment.title}<br><small>${currentAssessment.subtitle}</small></h3>`;
   results.forEach(r => {
     const div = document.createElement("div");
     div.className = `feedback ${r.earned === r.max ? "correct" : r.earned > 0 ? "partial" : "wrong"}`;
@@ -213,7 +201,6 @@ window.back = () => {
   document.getElementById("form").classList.remove("hidden");
 };
 
-/* PDF generation – unchanged except it now shows which part was completed */
 window.emailWork = async function() {
   if (!finalData) return alert("Submit first!");
 
@@ -224,16 +211,17 @@ window.emailWork = async function() {
   try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {}
 
   doc.setFontSize(20);
-  doc.text("US 24355 – Construction Materials", 45, 20);
-  doc.setFontSize(26);
-  doc.text(finalData.name, 45, 32);
+  doc.text(finalData.assessment.title, 45, 20);
   doc.setFontSize(16);
-  doc.text("ID: " + finalData.id + "    |    Teacher: " + finalData.teacherName, 45, 40);
-  doc.text("Part: " + finalData.partName, 45, 47);
-  doc.text("Submitted: " + finalData.submittedAt, 45, 54);
+  doc.text(finalData.assessment.subtitle, 45, 28);
+  doc.setFontSize(26);
+  doc.text(finalData.name, 45, 40);
+  doc.setFontSize(16);
+  doc.text("ID: " + finalData.id + "  |  Teacher: " + finalData.teacherName, 45, 50);
+  doc.text("Submitted: " + finalData.submittedAt, 45, 57);
   doc.setFontSize(28);
-  doc.text("GRADE: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)", 45, 68);
-  y = 78;
+  doc.text("GRADE: " + finalData.points + "/" + finalData.totalPoints + " (" + finalData.pct + "%)", 45, 70);
+  y = 80;
 
   finalData.results.forEach(r => {
     if (y > 270) { doc.addPage(); y = 20; try { doc.addImage("PHS-Crest.png", "PNG", 10, 8, 28, 28); } catch(e) {} }
@@ -268,11 +256,12 @@ window.emailWork = async function() {
     y += 10;
   });
 
+  const filename = finalData.id + "_" + finalData.name.replace(/ /g,"_") + "_" + finalData.assessment.id + ".pdf";
   const blob = doc.output('blob');
-  const file = new File([blob], finalData.id + "_" + finalData.name.replace(/ /g,"_") + "_US24355.pdf", {type:"application/pdf"});
+  const file = new File([blob], filename, {type:"application/pdf"});
 
   if (navigator.canShare && navigator.canShare({files:[file]})) {
-    try { await navigator.share({files:[file], title: finalData.name + " – US 24355"}); }
+    try { await navigator.share({files:[file], title: finalData.name + " – " + finalData.assessment.title}); }
     catch { fallbackOutlook(file); }
   } else fallbackOutlook(file);
 
@@ -280,10 +269,10 @@ window.emailWork = async function() {
     const reader = new FileReader();
     reader.onload = () => {
       window.open("https://outlook.office.com/mail/deeplink/compose?subject=" +
-        encodeURIComponent(finalData.name + " – US 24355 " + finalData.partName) +
+        encodeURIComponent(finalData.name + " – " + finalData.assessment.title) +
         "&body=" + encodeURIComponent(
-          "Kia ora " + finalData.teacherName + ",\n\nPlease find my completed " + finalData.partName + " attached.\n\n" +
-          "Grade: " + finalData.points + "/" + finalData.maxPossible + " (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
+          "Kia ora " + finalData.teacherName + ",\n\nPlease find my completed " + finalData.assessment.subtitle + " attached.\n\n" +
+          "Grade: " + finalData.points + "/" + finalData.totalPoints + " (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
         ) +
         "&attach=" + encodeURIComponent(reader.result), "_blank");
     };
